Part 1 of deletion unused code.